[package]
name = "railbreaker"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "railbreaker_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
railbreaker-lib = { path = "../../railbreaker-lib" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
zip = "7.0.0"
dirs = "6.0.0"
tauri-plugin-dialog = "2.4.2"
sqlx = { version="0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid", "chrono"] }
uuid = { version="1.19.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
phf = { version = "0.11", features = ["macros"] }
chrono = "0.4.43"
